maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:29: error: ':' expected but ')' found.
def suivreMur(i) = {
               ^Escaper:47: error: identifier expected but '}' found.
}
^